src/App.css
* {
  font-family: 'Libre Franklin', sans-serif;
}

body {
  margin: 7.5%;
}

a {
  color: #6f65e9;
}

hr {
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
  margin-right: 1rem;
}

/* img {
  width: 100%;
} */

form {
  text-align: center;
}

label {
  height: 5.5rem;
  font-size:3rem;
}

input {
  height: 5.5rem;
  font-size:3rem;
  color: #6f65e9;
  border-radius: 1rem;
  border-color: #6f65e9;
  padding-left: 1rem;
}

textarea{
  height: 5.5rem;
  font-size:3rem;
  color: #6f65e9;
  border-radius: 1rem;
  border-color: #6f65e9;
  padding-left: 1rem;
  width: 45%;
  height: 35%;
}

button {
  height: 5.5rem;
  font-size: 3rem;
  margin: 1.5rem;
  background: transparent;
  color: #6f65e9;
  border-radius: 1rem;
  border-color: #6f65e9;
}

button:hover{
  color: white;
  background: -webkit-linear-gradient(#6f65e9, #6f65e9);
}

.source-credit {
  font-style: italic;
  font-size: 70%;
}

#annotation-marker {
  position: absolute;
  z-index: 500;
  border: 5px solid #39ff14;
  border-radius: 100px;
  height:100px;
  width:100px;
}

/* ——————————————————————— */
/* ——————————————————————— */
/* DETAIL CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.div--detail-container{
  /* max-height: 200px; */
  max-width: 100%;

}

  .div--art-annotations-container{
    height: 72rem; /* This controls the height of the annotation list */
    display:flex;
  }

    .annotation-zone{
      float: left;
      flex-grow: 1;
      margin-right: 3rem;
    }

    .annotation-zone img{
      width: 55rem;
    }

    .div--annotation-list-container{
      overflow-y: scroll;
      width: 100%;

    }

      .div--detail-form{
        width: 30%;
      }

      .div--annotation-card{
        padding-left: 1.5rem;
        padding-right: 1.5rem;

        /* width: 100%; */
        width: 80%;
        /* width:95%; */
        border-radius: 1rem;
        margin-bottom: 1.5%;
        border: 2px solid #6f65e9;
      }

        .button--annotation-card {
          height: 2rem;
          font-size: 1rem;
        }
          .button--annotation-card-delete {
            color: red;
            border-color: red;
          }
            .button--annotation-card-delete:hover {
              color: white;
              background: red;
            }

          .button--annotation-card-update {
            color: #ffc900;
            border-color: #ffc900;
          }

          .button--annotation-card-update:hover {
            color: white;
            background: #ffc900;
          }
.div--full-annotation-container {
  margin-top: 2rem;
}

.h1-annotation-list-container-title {
  font-size: 2rem;
  margin-top: 0rem;
}

.div--detail-form{
  text-align: left;
  width: 50%;
}

  .detail-form-small-inputs{
    display: flex;
    margin-bottom: -2.0rem;
  }
    .detail-form-input{
      margin-top: 1rem;
      margin-bottom: 1rem;
      height: 2rem;
      font-size: 1.5rem;
      margin-right: 1.5rem;
    }

    .detail-form-label{
      margin-top: 1rem;
      font-size: 1.5rem;
      vertical-align: center;
      margin-right: 0.75rem;
    }

    .detail-form-textarea {
        text-align: left;

    }

  .detail-form-button  {
    margin-left: 0rem;
    margin-top: 1rem;
    height: 2.75rem;
    font-size: 1.5rem;
    /* padding: 1rem; */
  }



  .detail-form-textarea  {
    height: 2rem;
    margin-top: .5rem;
    font-size: 1.5rem;
    width: 100%;
    height: 5rem;
  }

  .div--artwork-info button {
    /* margin-left: 0rem;
    margin-top: 1rem; */
  }

/* ——————————————————————— */
/* ——————————————————————— */
/* INDEX CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.form--index{
  margin: 3.5rem;
}

/* ——————————————————————— */
/* ——————————————————————— */
/* ARTLIST CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */


/* ——————————————————————— */
/* ——————————————————————— */
/* ARTCARD STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.div--art-card{

  margin: 2.5rem;
  padding: 1.5rem;
  max-width: 90%;
  max-height: 10%;
  border-style: solid;
  border-width: 1px;
  /* border-color: #C8C8C8; GRAY*/
  border-color: #6f65e9;

  display:flex;
  /* justify-content: center; */
  /* vertical-align: middle; */
}
  .div--art-card img{
    width: 100%;
    height: 100%;
    float: left;
  }

  .div--art-card-left{
    margin: 1rem;
    max-width: 60%;
    /* max-height:25%; */
  }

  .div--art-card-right{
    margin: 1rem;
  }

  .art-card-title{
    font-size: 2.75rem;
  }

  .art-card-artist{
    font-size: 2rem;
  }

  .art-card-detail{
    font-size: 1.5rem;
  }

  .detail-source{
    padding-top: 1rem;
    font-size: 1.1rem;
  }



/* ——————————————————————— */
/* ——————————————————————— */
/* LOGIN CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.login-title{
  font-size: 7rem;
  text-transform: uppercase;
  text-align: center;
  padding-top: 5rem;
  background: -webkit-linear-gradient(#6f65e9, #667eea);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.div--login-container{
  text-align: center;

  margin: 20%;

}

.form--login {

}

.form--login-input{
  margin: 2rem;
}

.button--login{

}



/* ——————————————————————— */
/* ——————————————————————— */
/* HOME CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.home-title {
  font-size: 15rem;
  margin-bottom: -0.5rem;
  text-transform: uppercase;
  text-align: center;
  padding-top: 5rem;
  background: -webkit-linear-gradient(#6f65e9, #667eea);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


/* ——————————————————————— */
/* ——————————————————————— */
/* ABOUT CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.div--about-container{
  font-size: 2rem;
}

/* ——————————————————————— */
/* ——————————————————————— */
/* FULLANNOTATION CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.div--full-annotation{
  /* margin: 7.5%; */
  border-radius: 1rem;
  border: 2px solid #6f65e9;
  padding: 3rem;
}

/* ——————————————————————— */
/* ——————————————————————— */
/* EDIT CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */


.div--edit-form{
  text-align: left;

}
  .edit-form-small-inputs{
    display: flex;

  }
    .edit-form-input{
      margin-top: 1rem;
      margin-bottom: 2rem;
      height: 2rem;
      font-size: 1.5rem;
    }

    .edit-form-label{
      font-size: 1.5rem;
    }

  .edit-form-button  {
    margin-left: 0rem;
    margin-top: 1rem;
    height: 2rem;
    font-size: 1.5rem;
  }

  .edit-form-textarea  {
    height: 2rem;
    font-size: 1.5rem;
    width: 100%;
    height: 5rem;
  }

  .edit-form-input-coord {
    height: 2rem;
    font-size: 1.5rem;
    color: gray;
    width: 8.5%;
    border-color: gray;
  }

/* ——————————————————————— */
/* ——————————————————————— */
/* ANNOTATION LIST ITEM CONTAINER STYLING */
/* ——————————————————————— */
/* ——————————————————————— */

.annotation-list-item-header{
  color: gray;
}

.div--annotation-list-item{

  margin: 2.5rem;
  padding: 1.5rem;
  width: 90%;
  border-style: solid;
  border-width: 1px;
  /* border-color: #C8C8C8; GRAY*/
  border-color: #6f65e9;

  display:flex;
  justify-content: center;
  vertical-align: middle;
}
  .div--annotation-list-item img{
    width: 70%;
  }

  .div--annotation-list-item-left{
    margin: 1rem;
    margin-left: auto; /*YOU SOHULD PROBABLY DELETE THIS? */
  }

  .div--annotation-list-item-right{
    margin: 1rem;
    max-width: 40%;
  }

  .annotation-list-item-title{
    font-size: 2.75rem;
    margin-top: -1rem;
  }

  .annotation-list-item-artist{
    font-size: 2rem;
  }

  .annotation-list-item-detail{
    font-size: 1.5rem;
  }

  .detail-source{
    font-size: 1.1rem;
    margin-top: -1.5rem;
  }

  .div--annotation-artwork-info-container{
    margin-bottom: 2.5rem;
  }



/* ——————————————————————— */
/* ——————————————————————— */
/* NAVBAR STYLING */
/* ——————————————————————— */
/* ——————————————————————— */
.div--nav-bar {
  z-index: 1000;
  position: fixed;
  top: 0;
  left: 0;
  background-color: cyan;
  width: 100%;
  height: 5em;
  background-image: linear-gradient(135deg, #6f65e9 0%, #667eea 100%);
  /* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
}
  .div--nav-bar-item {
    color: white;
    text-decoration: none;
    font-size: 2.5rem;
    vertical-align:center;
    padding: 0.5rem;
    margin: 1rem;
    margin-right: 1.5rem;
    text-transform: uppercase;
    float: left;
    font-size: 2.25rem;
    font-family: 'Libre Franklin', sans-serif;
    font-weight: 200;
  }
    .div--nav-bar-item:hover {
      text-decoration: line-through;
    }

    .logo {
      float: left;
      /* font-weight: 500; */
      font-weight: 600;
    }
    .nav-right {
      float: right;
    }

    .button-logout  {
      background:none;
      border:none;
      margin:0;
      padding:0;
      margin-right: 1.5rem;
      font-weight: 600;
    }

    .button-logout:hover  {
      background:none;
      border:none;
    }

